Added option to not add MX records for secondary mail servers.
Added an option on the Batch Create Users page to generate passwords randomly, and a --random-pass flag to create-user.pl.
Added a Module Config option to disallow switching to Usermin as a mailbox user by domain owners.
Overall network traffic is now collected regularly, and can be displayed on the System Statistics page.
---- Changes since 3.67 ----
Updated the phpMyAdmin script installer to versions 3.1.3.1 and 2.11.9.5, OpenGoo to 1.3.1, Joomla to 1.5.10, Mantis to 1.1.6, Typo to 5.3, Django to 1.0.2, Zenphoto to 1.2.4, Twiki to 4.3.0, Bugzilla to 3.2.3, Magento to 1.3.0, OpenX to 2.8.0, PHPCoin to 1.6.0, PiWiki to 0.2.33, and Trac to 0.11.4.
Updated the Forwards, Passwd, Chora, Vacation and Gollem scripts from the Horde family to their latest versions.
Added a script installer for Simple Invoices.
Global template variables are now also available to pre- and post-domain creation commands, with the GLOBAL_ prefix.
Added the SSH server status to the System Information page, including the ability to stop and start it.
Made the docutils Python module optional for MoinMoin installs, as it is missing on CentOS.
Added a --plan flag to modify-reseller.pl, to allow setting of limits from a plan.
Added a Module Config option to control if default features come from plan or Features and Plugins page.
Greylisting using Postgrey can now be setup using Virtualmin, via the new Email Greylisting page. In addition, whitelists for SMTP servers and email recipents can be managed.
Added the --no-alias flag to list-domains.pl, to show non-alias domains.
Made the Website Options page available to domain owners, although only with limited fields available.
When creating a sub-server that is a sub-domain of it's parent, DNS records for the new domain will be added to the parent's zone.
Added a field on the Website Options page for making a virtual server the default website for its IP address.